kdeaccessibility (4:4.4.5-4) UNRELEASED; urgency=low


 -- Modestas Vainius <modax@debian.org>  Sun, 19 Dec 2010 17:58:54 +0200

kdeaccessibility (4:4.4.5-3) unstable; urgency=low

  [ Modestas Vainius ]
  * Fix kttsd crash on startup when there is no configured talkers. Merge the
    fix to the kcmkttsd_permanent_settings_jobmgr_fixes.diff patch as it
    triggers this crash by using broken piece of upstream code.
    (Closes: #606166)
  * Fill list of available output modules in KTTS job manager even when default
    module is unknown (kcmkttsd_permanent_settings_jobmgr_fixes.diff updated).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 07 Dec 2010 01:23:34 +0200

kdeaccessibility (4:4.4.5-2) unstable; urgency=low

  * Point debian/control Vcs fields to the new Git repository.
  * Add a series of patches to fix kttsd configuration framework which is
    completely broken. kttsd 4.4.x release is as a bunch of code which is in
    the middle of porting to speech-dispatcher from the old infrastructure.
    While the basics in the KTTS daemon work, the daemon is not configurable
    and hence unusable on the desktop. This series of patches attempts to
    address this RC shortcoming in order to make kttsd shippable in Debian
    stable (Closes: #599825). See patch headers for more information:
    - backport_kttsd_1072198_1138400.diff
    - kcmkttsd_permanent_settings_jobmgr_fixes.diff
    - kcmkttsd_support_talker_editing.diff

 -- Modestas Vainius <modax@debian.org>  Sat, 04 Dec 2010 01:31:31 +0200

kdeaccessibility (4:4.4.5-1) unstable; urgency=low

  [ Modestas Vainius ]
  * New upstream release.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Sune Vuorela ]
  * Update descriptions
  * Update email address

 -- Sune Vuorela <sune@debian.org>  Sun, 18 Jul 2010 11:54:34 +0200

kdeaccessibility (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]