@@ -1,5 +1,8 @@
 kdeaccessibility (4:4.4.5-4) UNRELEASED; urgency=low
 
+  * Do not send invalid settings (module, language) to speech-dispatcher
+    because this tends to cause a crash deep inside speech-dispatcher library.
+    (Closes: #607326)
 
  -- Modestas Vainius <modax@debian.org>  Sun, 19 Dec 2010 17:58:54 +0200
 
